Improved the 'projects' section

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 </div>
                 <div class="intro">
                     <h2>Hello, I'm Pratham</h2>
-                    <p>Aspiring Developer | Tech Enthusiast | Lifelong Learner</p>
+                    <p>Tech Enthusiast | Lifelong Learner</p>
                     <div class="cta-buttons">
                         <a href="#projects" class="btn" data-tab="projects"><span>View My Work</span></a>
                         <a href="#contact" class="btn" data-tab="contact"><span>Contact Me</span></a>
@@ -51,17 +51,19 @@
 
         <section id="about" class="tab-content">
             <h2>About Me</h2>
-            <p>I am currently pursuing BCA under MAKAUT. Passionate about web development, software engineering, and
-                exploring new technologies. I enjoy solving problems and building solutions that make a difference.</p>
+            <p>I am currently pursuing BCA from Inspiria Knowledge Campus. Passionate about software engineering and
+                exploring new technologies. I enjoy learning everyday.</p>
             <div class="skills">
-                <div class="skill-tile">HTML</div>
-                <div class="skill-tile">CSS</div>
-                <div class="skill-tile">JavaScript</div>
-                <div class="skill-tile">Python</div>
+                <!-- <div class="skill-tile">HTML</div> -->
+                <!-- <div class="skill-tile">CSS</div> -->
+                <!-- <div class="skill-tile">JavaScript</div> -->
+                <!-- <div class="skill-tile">Python</div> -->
                 <div class="skill-tile">C Programming</div>
                 <div class="skill-tile">Git & GitHub</div>
-                <div class="skill-tile">Responsive Design</div>
-                <div class="skill-tile">Problem Solving</div>
+                <div class="skill-tile">Linux Administration</div>
+                <div class="skill-tile">Script kiddie</div>
+                <!-- <div class="skill-tile">Responsive Design</div> -->
+                <!-- <div class="skill-tile">Problem Solving</div> -->
             </div>
         </section>
         <section id="gallery-section" class="tab-content">
@@ -93,7 +95,7 @@
             <h2>My Projects</h2>
             <div class="project-grid">
                 <div class="project-card">
-                    <!-- <img src="project1.jpg" alt="Portfolio Website"> -->
+                    <img src="images/project1.jpg" alt="project1">
                     <h3>Lorem ipsum dolor sit.</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium vero accusantium recusandae?
                         Fuga vitae ad omnis neque non quidem blanditiis ea porro delectus!</p>
@@ -103,7 +105,7 @@
                     </div>
                 </div>
                 <div class="project-card">
-                    <!-- <img src="project2.jpg" alt="Number Guessing Game"> -->
+                    <img src="images/project2.jpg" alt="project2">
                     <h3>Lorem ipsum dolor sit.</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea sint maxime eveniet officiis, aliquam
                         pariatur tempora alias atque praesentium ab repudiandae voluptates maiores.</p>
@@ -113,7 +115,7 @@
                     </div>
                 </div>
                 <div class="project-card">
-                    <!-- <img src="https://via.placeholder.com/400x225" alt="To-Do List App"> -->
+                    <img src="images/project3.jpg" alt="project3">
                     <h3>Lorem ipsum dolor sit.</h3>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam earum mollitia odit modi illum?
                         Minus id provident minima iusto eum aliquam, at ex!</p>
