Worked with images links. But with this change, images won't load while viewing the page offline.

--- a/index.html
+++ b/index.html
@@ -80,13 +80,13 @@
                 <!-- Slides -->
                 <div class="slides">
                     <div class="slide active">
-                        <img src="images/gallery1.jpg" alt="Gallery Image 1">
+                        <img src="https://raw.githubusercontent.com/dr460ngeek/portfolio_v2/refs/heads/main/images/gallery1.jpg" alt="Gallery Image 1">
                     </div>
                     <div class="slide"> <!-- Remove "active" from others -->
-                        <img src="images/gallery2.jpg" alt="Gallery Image 2">
+                        <img src="https://raw.githubusercontent.com/dr460ngeek/portfolio_v2/refs/heads/main/images/gallery1.jpg" alt="Gallery Image 2">
                     </div>
                     <div class="slide">
-                        <img src="images/gallery3.jpg" alt="Gallery Image 3">
+                        <img src="https://raw.githubusercontent.com/dr460ngeek/portfolio_v2/refs/heads/main/images/gallery1.jpg" alt="Gallery Image 3">
                     </div>
                 </div>
             </div>
@@ -95,7 +95,7 @@
             <h2>My Projects</h2>
             <div class="project-grid">
                 <div class="project-card">
-                    <img src="images/project1.jpg" alt="project1">
+                    <img src="https://raw.githubusercontent.com/dr460ngeek/portfolio_v2/refs/heads/main/images/project1.jpg" alt="project1">
                     <h3>Lorem ipsum dolor sit.</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium vero accusantium recusandae?
                         Fuga vitae ad omnis neque non quidem blanditiis ea porro delectus!</p>
@@ -105,7 +105,7 @@
                     </div>
                 </div>
                 <div class="project-card">
-                    <img src="images/project2.jpg" alt="project2">
+                    <img src="https://raw.githubusercontent.com/dr460ngeek/portfolio_v2/refs/heads/main/images/project2.jpg" alt="project2">
                     <h3>Lorem ipsum dolor sit.</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea sint maxime eveniet officiis, aliquam
                         pariatur tempora alias atque praesentium ab repudiandae voluptates maiores.</p>
@@ -115,7 +115,7 @@
                     </div>
                 </div>
                 <div class="project-card">
-                    <img src="images/project3.jpg" alt="project3">
+                    <img src="https://raw.githubusercontent.com/dr460ngeek/portfolio_v2/refs/heads/main/images/project3.jpg" alt="project3">
                     <h3>Lorem ipsum dolor sit.</h3>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam earum mollitia odit modi illum?
                         Minus id provident minima iusto eum aliquam, at ex!</p>
