--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                     <div class="contact-card">
                         <h3>Connect With Me</h3>
                         <div class="social-icons">
-                            <a href="https://www.github.com/dr460ngeek" target="_blank" class="social-item">
+                            <a href="https://www.github.com/dr460ngeek/" target="_blank" class="social-item">
                                 <i class="fab fa-github"></i>
                                 <h5>GitHub</h5>
                             </a>
@@ -262,11 +262,11 @@
                                 <i class="fas fa-envelope"></i>
                                 <h5>Email</h5>
                             </a>
-                            <a href="https://www.linkedin.com/in/pratham" target="_blank" class="social-item">
+                            <a href="https://www.linkedin.com/in/pratham-agarwal-586398339?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank" class="social-item">
                                 <i class="fab fa-linkedin"></i>
                                 <h5>LinkedIn</h5>
                             </a>
-                            <a href="tel:8882192787" class="social-item">
+                            <a href="tel:+9779817933155" class="social-item">
                                 <i class="fas fa-phone"></i>
                                 <h5>Call Me</h5>
                             </a>
