made some important corrections

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
             <div class="nav-container">
                 <a href="#home" class="logo-container" data-tab="home">
                     <!-- ADD YOUR LOGO IMAGE PATH HERE -->
-                    <img class="nav-logo" src="https://avatars.githubusercontent.com/u/44492901?v=4" alt="Pratham's Logo" onerror="this.style.display='none'">
+                    <img class="nav-logo" src="https://avatars.githubusercontent.com/u/44492901?v=4"
+                        alt="Pratham's Logo" onerror="this.style.display='none'">
                     <h1>Pratham<span>.</span></h1>
                 </a>
                 <ul class="nav-tabs">
@@ -87,10 +88,10 @@
                     <i class="fas fa-server"></i>
                     <span>System Administration</span>
                 </div>
-                <div class="skill-tile">
+                <!-- <div class="skill-tile">
                     <i class="fas fa-database"></i>
                     <span>Database Management</span>
-                </div>
+                </div> --> <!-- Extra for later. -->
             </div>
         </section>
 
@@ -101,21 +102,24 @@
                 <!-- Slides -->
                 <div class="slides">
                     <div class="slide">
-                        <img src="https://raw.githubusercontent.com/dr460ngeek/portfolio_v2/refs/heads/main/images/gallery1.jpg" alt="Gallery Image 1">
+                        <img src="https://raw.githubusercontent.com/dr460ngeek/portfolio_v2/refs/heads/main/images/gallery1.jpg"
+                            alt="Gallery Image 1">
                         <div class="slide-overlay">
                             <h3>Code Development</h3>
                             <p>Working on innovative projects</p>
                         </div>
                     </div>
                     <div class="slide">
-                        <img src="https://raw.githubusercontent.com/dr460ngeek/portfolio_v2/refs/heads/main/images/gallery2.jpg" alt="Gallery Image 2">
+                        <img src="https://raw.githubusercontent.com/dr460ngeek/portfolio_v2/refs/heads/main/images/gallery2.jpg"
+                            alt="Gallery Image 2">
                         <div class="slide-overlay">
                             <h3>Linux Environment</h3>
                             <p>Server administration and configuration</p>
                         </div>
                     </div>
                     <div class="slide">
-                        <img src="https://raw.githubusercontent.com/dr460ngeek/portfolio_v2/refs/heads/main/images/gallery3.jpg" alt="Gallery Image 3">
+                        <img src="https://raw.githubusercontent.com/dr460ngeek/portfolio_v2/refs/heads/main/images/gallery3.jpg"
+                            alt="Gallery Image 3">
                         <div class="slide-overlay">
                             <h3>Coding Sessions</h3>
                             <p>Developing efficient solutions</p>
@@ -133,7 +137,7 @@
                     </button>
                 </div>
             </div>
-            
+
             <!-- Radio Controls - MOVED outside the slider -->
             <div class="slider-controls-container">
                 <div class="slider-controls">
@@ -155,7 +159,8 @@
             <div class="project-grid">
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="https://raw.githubusercontent.com/dr460ngeek/portfolio_v2/refs/heads/main/images/project1.jpg" alt="project1">
+                        <img src="https://raw.githubusercontent.com/dr460ngeek/portfolio_v2/refs/heads/main/images/project1.jpg"
+                            alt="project1">
                     </div>
                     <div class="project-content">
                         <h3>Linux Automation Scripts</h3>
@@ -178,7 +183,8 @@
                 </div>
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="https://raw.githubusercontent.com/dr460ngeek/portfolio_v2/refs/heads/main/images/project2.jpg" alt="project2">
+                        <img src="https://raw.githubusercontent.com/dr460ngeek/portfolio_v2/refs/heads/main/images/project2.jpg"
+                            alt="project2">
                     </div>
                     <div class="project-content">
                         <h3>Student Database System</h3>
@@ -201,7 +207,8 @@
                 </div>
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="https://raw.githubusercontent.com/dr460ngeek/portfolio_v2/refs/heads/main/images/project3.jpg" alt="project3">
+                        <img src="https://raw.githubusercontent.com/dr460ngeek/portfolio_v2/refs/heads/main/images/project3.jpg"
+                            alt="project3">
                     </div>
                     <div class="project-content">
                         <h3>Network Monitoring Tool</h3>
@@ -262,7 +269,8 @@
                                 <i class="fas fa-envelope"></i>
                                 <h5>Email</h5>
                             </a>
-                            <a href="https://www.linkedin.com/in/pratham-agarwal-586398339?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank" class="social-item">
+                            <a href="https://www.linkedin.com/in/pratham-agarwal-586398339?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"
+                                target="_blank" class="social-item">
                                 <i class="fab fa-linkedin"></i>
                                 <h5>LinkedIn</h5>
                             </a>
@@ -418,7 +426,7 @@
             contactForm.reset();
         });
 
-// Gallery Slider
+        // Gallery Slider
         const slides = document.querySelectorAll('.slide');
         const radioButtons = document.querySelectorAll('.slider-controls input');
         const prevBtn = document.querySelector('.prev-btn');
@@ -524,8 +532,10 @@
         const typingText = document.getElementById('typing-text');
         const texts = [
             "Tech Enthusiast | Lifelong Learner",
-            "BCA Student | Aspiring Developer",
-            "Linux Admin | C Programmer"
+            "BCA Student | Mostly Self-taught",
+            "Linux Admin | Open Source Contributor",
+            "I might not be a good student but I am a damn good businessman.",
+            "Learning not for the sake of getting employed but for the sake of learning.",
         ];
         let textIndex = 0;
         let charIndex = 0;
