fixed some image related issues.

--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
         <nav>
             <div class="nav-container">
                 <a href="#home" class="logo-container" data-tab="home">
-                    <!-- ADD YOUR LOGO IMAGE PATH HERE -->
-                    <img class="nav-logo" src="https://avatars.githubusercontent.com/u/44492901?v=4"
+                    <img class="nav-logo" src="https://raw.githubusercontent.com/dr460ngeek/portfolio_v2/refs/heads/main/images/logo.png"
                         alt="Pratham's Logo" onerror="this.style.display='none'">
                     <h1>Pratham<span>.</span></h1>
                 </a>
@@ -41,7 +40,7 @@
         <section id="home" class="tab-content active">
             <div class="home-container">
                 <div class="profile-pic">
-                    <img src="https://dr460ngeek.vercel.app/asset/img/Watashi.jpeg" alt="Pratham's Profile Picture"
+                    <img src="https://raw.githubusercontent.com/dr460ngeek/portfolio_v2/refs/heads/main/images/Profile.jpeg" alt="Pratham's Profile Picture"
                         onerror="this.src='https://via.placeholder.com/200'" />
                 </div>
                 <div class="intro">
