added new 'blogs' section.

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                     <li><a href="#gallery-section" data-tab="gallery-section">Gallery</a></li>
                     <li><a href="#projects" data-tab="projects">Projects</a></li>
                     <li><a href="#contact" data-tab="contact">Contact</a></li>
+                    <li><a href="./blog.html">Blogs</a></li>
                 </ul>
                 <div class="hamburger">
                     <i class="fas fa-bars"></i>
