Gallery section hidden for now. Blogs are working only when live-server extension on VS-code is turned on. Will have to test with github-actions

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
                 <ul class="nav-tabs">
                     <li><a href="#home" class="active" data-tab="home">Home</a></li>
                     <li><a href="#about" data-tab="about">About</a></li>
-                    <li><a href="#gallery-section" data-tab="gallery-section">Gallery</a></li>
+                    <!-- <li><a href="#gallery-section" data-tab="gallery-section">Gallery</a></li> -->
+                    <li><a href="./blog.html">Blogs</a></li>
                     <li><a href="#projects" data-tab="projects">Projects</a></li>
                     <li><a href="#contact" data-tab="contact">Contact</a></li>
-                    <li><a href="./blog.html">Blogs</a></li>
                 </ul>
                 <div class="hamburger">
                     <i class="fas fa-bars"></i>
