checking if the images gets updated or not. might need to checkout to the previous commit if it does'nt.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <li><a href="#about" data-tab="about">About</a></li>
                     <!-- <li><a href="#gallery-section" data-tab="gallery-section">Gallery</a></li> -->
                     <li><a href="./blog.html">Blogs</a></li>
-                    <li><a href="#projects" data-tab="projects">Projects</a></li>
+                    <!-- <li><a href="#projects" data-tab="projects">Projects</a></li> -->
                     <li><a href="#contact" data-tab="contact">Contact</a></li>
                 </ul>
                 <div class="hamburger">
@@ -236,7 +236,7 @@
             <h2>Get In Touch</h2>
             <div class="contact-container">
                 <!-- Contact Form -->
-                <form class="contact-form" id="contactForm">
+                <!-- <form class="contact-form" id="contactForm">
                     <div class="form-group">
                         <label for="name">Name</label>
                         <input type="text" id="name" name="name" placeholder="Your Name" required />
@@ -255,7 +255,7 @@
                     <button type="submit">
                         <i class="fas fa-paper-plane"></i> Send Message
                     </button>
-                </form>
+                </form> -->
 
                 <div class="contact-cards">
                     <div class="contact-card">
