Added true skills and hid few things. Hidden things still exist but will be showing later on when I complete work on them. @111

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         onerror="this.src='https://via.placeholder.com/200'" />
                 </div>
                 <div class="intro">
-                    <h2>Hello, I'm Pratham</h2>
+                    <h2>Hello, I'm Pratham.</h2>
                     <div class="typing-text" id="typing-text"></div>
                     <div class="cta-buttons">
                         <a href="#projects" class="btn" data-tab="projects">
@@ -63,7 +63,7 @@
 
         <section id="about" class="tab-content">
             <h2>About Me</h2>
-            <p>I am currently pursuing BCA from Inspiria Knowledge Campus. Passionate about software engineering and
+            <p>I am Pratham Agarwal aka dr460n, yeah that's my username. A 2nd year student pursuing BCA from Inspiria Knowledge Campus. Passionate about software engineering and
                 exploring new technologies. I enjoy learning everyday and challenging myself with new projects.</p>
 
             <h3 class="skills-title">My Skills</h3>
@@ -82,11 +82,19 @@
                 </div>
                 <div class="skill-tile">
                     <i class="fas fa-terminal"></i>
-                    <span>Scripting</span>
+                    <span>Prompt Engineering</span>
                 </div>
                 <div class="skill-tile">
                     <i class="fas fa-server"></i>
                     <span>System Administration</span>
+                </div>
+                <div class="skill-tile">
+                    <i class="fas fa-people-roof"></i>
+                    <span>Managerial skils</span>
+                </div>
+                <div class="skill-tile">
+                    <i class="fas fa-file-invoice-dollar"></i>
+                    <span>Accounting</span>
                 </div>
                 <!-- <div class="skill-tile">
                     <i class="fas fa-database"></i>
