Added search box in the 'blogs' section

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 </div>
                 <div class="skill-tile">
                     <i class="fas fa-people-roof"></i>
-                    <span>Managerial skils</span>
+                    <span>Management</span>
                 </div>
                 <div class="skill-tile">
                     <i class="fas fa-file-invoice-dollar"></i>
@@ -302,7 +302,7 @@
                 <a href="#projects" data-tab="projects">Projects</a>
                 <a href="#contact" data-tab="contact">Contact</a> -->
             </div>
-            <p class="copyright">&copy; 2025 Pratham. All rights reserved.</p>
+            <p class="copyright">&copy; 2025 dr460n. All rights reserved.</p>
         </div>
     </footer>
 
