Replaced "View my work" with "View my blogs" till the #projects page is completely ready-to-use

--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
                     <h2>Hello, I'm Pratham.</h2>
                     <div class="typing-text" id="typing-text"></div>
                     <div class="cta-buttons">
-                        <a href="#projects" class="btn" data-tab="projects">
+                        <a href="./blog.html" class="btn">
                             <i class="fas fa-briefcase"></i>
-                            <span>View My Work</span>
+                            <span>View My Blogs</span>
                         </a>
                         <a href="#contact" class="btn btn-outline" data-tab="contact">
                             <i class="fas fa-paper-plane"></i>
