--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
                             </a>
                             <a href="mailto:pratham.ag1@outlook.com" target="_blank" class="social-item">
                                 <i class="fas fa-envelope"></i>
-                                <h5>Email</h5>
+                                <h5>E-mail</h5>
                             </a>
                             <a href="https://www.linkedin.com/in/pratham-agarwal-586398339?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"
                                 target="_blank" class="social-item">
