--- a/index.html
+++ b/index.html
@@ -244,8 +244,8 @@
             <h2>Get In Touch</h2>
             <div class="contact-container">
                 <!-- Contact Form -->
-                <!-- <form class="contact-form" id="contactForm">
-                    <div class="form-group">
+                <form class="contact-form" id="contactForm">
+                    <!-- <div class="form-group">
                         <label for="name">Name</label>
                         <input type="text" id="name" name="name" placeholder="Your Name" required />
                         <i class="fas fa-user"></i>
@@ -262,8 +262,8 @@
                     </div>
                     <button type="submit">
                         <i class="fas fa-paper-plane"></i> Send Message
-                    </button>
-                </form> -->
+                    </button> -->
+                </form>
 
                 <div class="contact-cards">
                     <div class="contact-card">
