Used feather icon instead of briefcase icon in the home page on 'View my blogs' button.

--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
                     <div class="typing-text" id="typing-text"></div>
                     <div class="cta-buttons">
                         <a href="./blog.html" class="btn">
-                            <i class="fas fa-briefcase"></i>
+                            <!-- <i class="fas fa-briefcase"></i> -->
+                            <i class="fas fa-feather"></i>
                             <span>View My Blogs</span>
                         </a>
                         <a href="#contact" class="btn btn-outline" data-tab="contact">
