--- a/blog.html
+++ b/blog.html
@@ -43,7 +43,7 @@
         <!-- Blog Listing View -->
         <section id="blog-listing">
             <div class="blog-header">
-                <h1>My Blog</h1>
+                <h1>My Blogs</h1>
                 <p>Thoughts, tutorials, and insights on technology, programming, and my learning journey</p>
             </div>
             
@@ -57,9 +57,9 @@
                 </div>
             </div>
 
-            <div id="searchResultsInfo" class="search-results-info" style="display: none;">
-                Showing results for: <span id="searchQuery"></span>
-            </div>
+            <!-- <div id="searchResultsInfo" class="search-results-info" style="display: none;"> -->
+                <!-- Showing results for: <span id="searchQuery"></span> -->
+            <!-- </div> -->
 
             <div class="blog-grid" id="blog-posts-container">
 
