--- a/blog.html
+++ b/blog.html
@@ -47,7 +47,7 @@
                 <p>Thoughts, tutorials, and insights on technology, programming, and my learning journey</p>
             </div>
             
-            <!-- Search Bar -->
+            <!-- Search Bar
             <div class="search-container">
                 <div class="search-box">
                     <input type="text" class="search-input" id="searchInput" placeholder="Search blog posts...">
@@ -57,13 +57,13 @@
                 </div>
             </div>
 
-            <!-- <div id="searchResultsInfo" class="search-results-info" style="display: none;"> -->
-                <!-- Showing results for: <span id="searchQuery"></span> -->
-            <!-- </div> -->
+            <div id="searchResultsInfo" class="search-results-info" style="display: none;">
+                Showing results for: <span id="searchQuery"></span>
+            </div>
 
             <div class="blog-grid" id="blog-posts-container">
 
-            <div class="blog-grid" id="blog-posts-container">
+            <div class="blog-grid" id="blog-posts-container"> -->
                 <!-- Blog posts will be loaded here dynamically -->
                 <div class="loading">
                     <div class="spinner"></div>
