--- a/blog.html
+++ b/blog.html
@@ -21,7 +21,7 @@
             <div class="nav-container">
                 <a href="index.html" class="logo-container">
                     <!-- ADD YOUR LOGO IMAGE PATH HERE -->
-                    <img class="nav-logo" src="https://raw.githubusercontent.com/dr460ngeek/portfolio_v2/refs/heads/main/images/Profile.jpeg" alt="Pratham's Logo"
+                    <img class="nav-logo" src="https://raw.githubusercontent.com/dr460ngeek/portfolio_v2/refs/heads/main/images/logo.png" alt="Pratham's Logo"
                         onerror="this.style.display='none'">
                     <h1>Pratham's <span>Blog.</span></h1>
                 </a>
