--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta property="og:image" content="images/OGimage.jpg" />
+    <meta property="og:image" content="https://raw.githubusercontent.com/dr460ngeek/portfolio_v2/refs/heads/main/images/OGimage.jpg" />
     <title>Pratham's Portfolio</title>
     <meta name="description" content="Portfolio of Pratham, a BCA student and aspiring developer">
     <link rel="preconnect" href="https://fonts.googleapis.com">
